// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders WuiColorStops 1`] = `
<div
  class="wuiRangeWrapper wuiColorStops testClass1 testClass2"
  data-test-subj="wuiColorStops"
  tabindex="0"
>
  <p
    aria-live="polite"
    class="wuiScreenReaderOnly"
  >
    Test:   Color stop picker. Each stop consists of a number and corresponding color value. Use the Down and Up arrow keys to select individual stops. Press the Enter key to create a new stop.
  </p>
  <div
    class="wuiRangeTrack"
  >
    <div
      class="wuiRangeHighlight wuiColorStops__highlight"
    >
      <div
        class="wuiRangeHighlight__progress"
        style="background:linear-gradient(to right,currentColor, currentColor undefined%, rgb(255,0,0) undefined%,rgb(0,255,0) undefined%,rgb(0,0,255) undefined%);margin-left:0%;width:100%"
      />
    </div>
    <div
      class="wuiColorStops__addContainer"
      data-test-subj="wuiColorStopsAdd"
    >
      <div
        class="wuiColorStops__addTarget"
        style="left:0%"
      />
    </div>
    <div
      class="wuiPopover wuiPopover--anchorDownCenter wuiColorStopPopover"
      style="left:0%"
    >
      <div
        class="wuiPopover__anchor wuiColorStopPopover__anchor"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="24"
          aria-valuemin="0"
          aria-valuenow="0"
          aria-valuetext="Stop: 0, Color: #FF0000 (1 of 3)"
          class="wuiRangeThumb wuiColorStopThumb"
          data-index="wuiColorStop_0"
          data-test-subj="wuiColorStopThumb"
          role="slider"
          style="background:rgb(255,0,0)"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="wuiPopover wuiPopover--anchorDownCenter wuiColorStopPopover"
      style="left:21%"
    >
      <div
        class="wuiPopover__anchor wuiColorStopPopover__anchor"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="34"
          aria-valuemin="1"
          aria-valuenow="25"
          aria-valuetext="Stop: 25, Color: #00FF00 (2 of 3)"
          class="wuiRangeThumb wuiColorStopThumb"
          data-index="wuiColorStop_1"
          data-test-subj="wuiColorStopThumb"
          role="slider"
          style="background:rgb(0,255,0)"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="wuiPopover wuiPopover--anchorDownCenter wuiColorStopPopover"
      style="left:29.4%"
    >
      <div
        class="wuiPopover__anchor wuiColorStopPopover__anchor"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="100"
          aria-valuemin="26"
          aria-valuenow="35"
          aria-valuetext="Stop: 35, Color: #0000FF (3 of 3)"
          class="wuiRangeThumb wuiColorStopThumb"
          data-index="wuiColorStop_2"
          data-test-subj="wuiColorStopThumb"
          role="slider"
          style="background:rgb(0,0,255)"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders compressed WuiColorStops 1`] = `
<div
  class="wuiRangeWrapper wuiColorStops testClass1 testClass2"
  data-test-subj="wuiColorStops"
  tabindex="0"
>
  <p
    aria-live="polite"
    class="wuiScreenReaderOnly"
  >
    Test:   Color stop picker. Each stop consists of a number and corresponding color value. Use the Down and Up arrow keys to select individual stops. Press the Enter key to create a new stop.
  </p>
  <div
    class="wuiRangeTrack"
  >
    <div
      class="wuiRangeHighlight wuiRangeHighlight--compressed wuiColorStops__highlight"
    >
      <div
        class="wuiRangeHighlight__progress"
        style="background:linear-gradient(to right,currentColor, currentColor undefined%, rgb(255,0,0) undefined%,rgb(0,255,0) undefined%,rgb(0,0,255) undefined%);margin-left:0%;width:100%"
      />
    </div>
    <div
      class="wuiColorStops__addContainer"
      data-test-subj="wuiColorStopsAdd"
    >
      <div
        class="wuiColorStops__addTarget"
        style="left:0%"
      />
    </div>
    <div
      class="wuiPopover wuiPopover--anchorDownCenter wuiColorStopPopover"
      style="left:0%"
    >
      <div
        class="wuiPopover__anchor wuiColorStopPopover__anchor"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="24"
          aria-valuemin="0"
          aria-valuenow="0"
          aria-valuetext="Stop: 0, Color: #FF0000 (1 of 3)"
          class="wuiRangeThumb wuiColorStopThumb"
          data-index="wuiColorStop_0"
          data-test-subj="wuiColorStopThumb"
          role="slider"
          style="background:rgb(255,0,0)"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="wuiPopover wuiPopover--anchorDownCenter wuiColorStopPopover"
      style="left:21%"
    >
      <div
        class="wuiPopover__anchor wuiColorStopPopover__anchor"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="34"
          aria-valuemin="1"
          aria-valuenow="25"
          aria-valuetext="Stop: 25, Color: #00FF00 (2 of 3)"
          class="wuiRangeThumb wuiColorStopThumb"
          data-index="wuiColorStop_1"
          data-test-subj="wuiColorStopThumb"
          role="slider"
          style="background:rgb(0,255,0)"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="wuiPopover wuiPopover--anchorDownCenter wuiColorStopPopover"
      style="left:29.4%"
    >
      <div
        class="wuiPopover__anchor wuiColorStopPopover__anchor"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="100"
          aria-valuemin="26"
          aria-valuenow="35"
          aria-valuetext="Stop: 35, Color: #0000FF (3 of 3)"
          class="wuiRangeThumb wuiColorStopThumb"
          data-index="wuiColorStop_2"
          data-test-subj="wuiColorStopThumb"
          role="slider"
          style="background:rgb(0,0,255)"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders disabled WuiColorStops 1`] = `
<div
  class="wuiRangeWrapper wuiColorStops wuiColorStops-isDisabled testClass1 testClass2"
  data-test-subj="wuiColorStops"
  tabindex="-1"
>
  <p
    aria-live="polite"
    class="wuiScreenReaderOnly"
  >
    Test:  Disabled. Color stop picker. Each stop consists of a number and corresponding color value. Use the Down and Up arrow keys to select individual stops. Press the Enter key to create a new stop.
  </p>
  <div
    class="wuiRangeTrack wuiRangeTrack--disabled"
  >
    <div
      class="wuiRangeHighlight wuiColorStops__highlight"
    >
      <div
        class="wuiRangeHighlight__progress"
        style="background:linear-gradient(to right,currentColor, currentColor undefined%, rgb(255,0,0) undefined%,rgb(0,255,0) undefined%,rgb(0,0,255) undefined%);margin-left:0%;width:100%"
      />
    </div>
    <div
      class="wuiColorStops__addContainer wuiColorStops__addContainer-isDisabled"
      data-test-subj="wuiColorStopsAdd"
    >
      <div
        class="wuiColorStops__addTarget"
        style="left:0%"
      />
    </div>
    <div
      class="wuiPopover wuiPopover--anchorDownCenter wuiColorStopPopover"
      style="left:0%"
    >
      <div
        class="wuiPopover__anchor wuiColorStopPopover__anchor"
      >
        <button
          aria-disabled="true"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="24"
          aria-valuemin="0"
          aria-valuenow="0"
          aria-valuetext="Stop: 0, Color: #FF0000 (1 of 3)"
          class="wuiRangeThumb wuiColorStopThumb"
          data-index="wuiColorStop_0"
          data-test-subj="wuiColorStopThumb"
          disabled=""
          role="slider"
          style="background:rgb(255,0,0)"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="wuiPopover wuiPopover--anchorDownCenter wuiColorStopPopover"
      style="left:21%"
    >
      <div
        class="wuiPopover__anchor wuiColorStopPopover__anchor"
      >
        <button
          aria-disabled="true"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="34"
          aria-valuemin="1"
          aria-valuenow="25"
          aria-valuetext="Stop: 25, Color: #00FF00 (2 of 3)"
          class="wuiRangeThumb wuiColorStopThumb"
          data-index="wuiColorStop_1"
          data-test-subj="wuiColorStopThumb"
          disabled=""
          role="slider"
          style="background:rgb(0,255,0)"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="wuiPopover wuiPopover--anchorDownCenter wuiColorStopPopover"
      style="left:29.4%"
    >
      <div
        class="wuiPopover__anchor wuiColorStopPopover__anchor"
      >
        <button
          aria-disabled="true"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="100"
          aria-valuemin="26"
          aria-valuenow="35"
          aria-valuetext="Stop: 35, Color: #0000FF (3 of 3)"
          class="wuiRangeThumb wuiColorStopThumb"
          data-index="wuiColorStop_2"
          data-test-subj="wuiColorStopThumb"
          disabled=""
          role="slider"
          style="background:rgb(0,0,255)"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders empty WuiColorStops 1`] = `
<div
  class="wuiRangeWrapper wuiColorStops testClass1 testClass2"
  data-test-subj="wuiColorStops"
  tabindex="0"
>
  <p
    aria-live="polite"
    class="wuiScreenReaderOnly"
  >
    Test:   Color stop picker. Each stop consists of a number and corresponding color value. Use the Down and Up arrow keys to select individual stops. Press the Enter key to create a new stop.
  </p>
  <div
    class="wuiRangeTrack"
  >
    <div
      class="wuiRangeHighlight wuiColorStops__highlight"
    >
      <div
        class="wuiRangeHighlight__progress"
        style="background:linear-gradient(to right,);margin-left:0%;width:100%"
      />
    </div>
    <div
      class="wuiColorStops__addContainer"
      data-test-subj="wuiColorStopsAdd"
    >
      <div
        class="wuiColorStops__addTarget"
        style="left:0%"
      />
    </div>
  </div>
</div>
`;

exports[`renders fixed stop WuiColorStops 1`] = `
<div
  class="wuiRangeWrapper wuiColorStops testClass1 testClass2"
  data-test-subj="wuiColorStops"
  tabindex="0"
>
  <p
    aria-live="polite"
    class="wuiScreenReaderOnly"
  >
    Test:   Color stop picker. Each stop consists of a number and corresponding color value. Use the Down and Up arrow keys to select individual stops. Press the Enter key to create a new stop.
  </p>
  <div
    class="wuiRangeTrack"
  >
    <div
      class="wuiRangeHighlight wuiColorStops__highlight"
    >
      <div
        class="wuiRangeHighlight__progress"
        style="background:linear-gradient(to right,currentColor, currentColor undefined%, rgb(255,0,0) undefined%, rgb(255,0,0) undefined%,rgb(0,255,0) undefined%, rgb(0,255,0) undefined%,rgb(0,0,255) undefined%);margin-left:0%;width:100%"
      />
    </div>
    <div
      class="wuiColorStops__addContainer"
      data-test-subj="wuiColorStopsAdd"
    >
      <div
        class="wuiColorStops__addTarget"
        style="left:0%"
      />
    </div>
    <div
      class="wuiPopover wuiPopover--anchorDownCenter wuiColorStopPopover"
      style="left:0%"
    >
      <div
        class="wuiPopover__anchor wuiColorStopPopover__anchor"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="24"
          aria-valuemin="0"
          aria-valuenow="0"
          aria-valuetext="Stop: 0, Color: #FF0000 (1 of 3)"
          class="wuiRangeThumb wuiColorStopThumb"
          data-index="wuiColorStop_0"
          data-test-subj="wuiColorStopThumb"
          role="slider"
          style="background:rgb(255,0,0)"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="wuiPopover wuiPopover--anchorDownCenter wuiColorStopPopover"
      style="left:21%"
    >
      <div
        class="wuiPopover__anchor wuiColorStopPopover__anchor"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="34"
          aria-valuemin="1"
          aria-valuenow="25"
          aria-valuetext="Stop: 25, Color: #00FF00 (2 of 3)"
          class="wuiRangeThumb wuiColorStopThumb"
          data-index="wuiColorStop_1"
          data-test-subj="wuiColorStopThumb"
          role="slider"
          style="background:rgb(0,255,0)"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="wuiPopover wuiPopover--anchorDownCenter wuiColorStopPopover"
      style="left:29.4%"
    >
      <div
        class="wuiPopover__anchor wuiColorStopPopover__anchor"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="100"
          aria-valuemin="26"
          aria-valuenow="35"
          aria-valuetext="Stop: 35, Color: #0000FF (3 of 3)"
          class="wuiRangeThumb wuiColorStopThumb"
          data-index="wuiColorStop_2"
          data-test-subj="wuiColorStopThumb"
          role="slider"
          style="background:rgb(0,0,255)"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders free-range WuiColorStops 1`] = `
<div
  class="wuiRangeWrapper wuiColorStops testClass1 testClass2"
  data-test-subj="wuiColorStops"
  tabindex="0"
>
  <p
    aria-live="polite"
    class="wuiScreenReaderOnly"
  >
    Test:   Color stop picker. Each stop consists of a number and corresponding color value. Use the Down and Up arrow keys to select individual stops. Press the Enter key to create a new stop.
  </p>
  <div
    class="wuiRangeTrack"
  >
    <div
      class="wuiRangeHighlight wuiColorStops__highlight"
    >
      <div
        class="wuiRangeHighlight__progress"
        style="background:linear-gradient(to right,);margin-left:0%;width:100%"
      />
    </div>
    <div
      class="wuiColorStops__addContainer"
      data-test-subj="wuiColorStopsAdd"
    >
      <div
        class="wuiColorStops__addTarget"
        style="left:0%"
      />
    </div>
  </div>
</div>
`;

exports[`renders fullWidth WuiColorStops 1`] = `
<div
  class="wuiRangeWrapper wuiRangeWrapper--fullWidth wuiColorStops testClass1 testClass2"
  data-test-subj="wuiColorStops"
  tabindex="0"
>
  <p
    aria-live="polite"
    class="wuiScreenReaderOnly"
  >
    Test:   Color stop picker. Each stop consists of a number and corresponding color value. Use the Down and Up arrow keys to select individual stops. Press the Enter key to create a new stop.
  </p>
  <div
    class="wuiRangeTrack"
  >
    <div
      class="wuiRangeHighlight wuiColorStops__highlight"
    >
      <div
        class="wuiRangeHighlight__progress"
        style="background:linear-gradient(to right,currentColor, currentColor undefined%, rgb(255,0,0) undefined%,rgb(0,255,0) undefined%,rgb(0,0,255) undefined%);margin-left:0%;width:100%"
      />
    </div>
    <div
      class="wuiColorStops__addContainer"
      data-test-subj="wuiColorStopsAdd"
    >
      <div
        class="wuiColorStops__addTarget"
        style="left:0%"
      />
    </div>
    <div
      class="wuiPopover wuiPopover--anchorDownCenter wuiColorStopPopover"
      style="left:0%"
    >
      <div
        class="wuiPopover__anchor wuiColorStopPopover__anchor"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="24"
          aria-valuemin="0"
          aria-valuenow="0"
          aria-valuetext="Stop: 0, Color: #FF0000 (1 of 3)"
          class="wuiRangeThumb wuiColorStopThumb"
          data-index="wuiColorStop_0"
          data-test-subj="wuiColorStopThumb"
          role="slider"
          style="background:rgb(255,0,0)"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="wuiPopover wuiPopover--anchorDownCenter wuiColorStopPopover"
      style="left:21%"
    >
      <div
        class="wuiPopover__anchor wuiColorStopPopover__anchor"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="34"
          aria-valuemin="1"
          aria-valuenow="25"
          aria-valuetext="Stop: 25, Color: #00FF00 (2 of 3)"
          class="wuiRangeThumb wuiColorStopThumb"
          data-index="wuiColorStop_1"
          data-test-subj="wuiColorStopThumb"
          role="slider"
          style="background:rgb(0,255,0)"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="wuiPopover wuiPopover--anchorDownCenter wuiColorStopPopover"
      style="left:29.4%"
    >
      <div
        class="wuiPopover__anchor wuiColorStopPopover__anchor"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="100"
          aria-valuemin="26"
          aria-valuenow="35"
          aria-valuetext="Stop: 35, Color: #0000FF (3 of 3)"
          class="wuiRangeThumb wuiColorStopThumb"
          data-index="wuiColorStop_2"
          data-test-subj="wuiColorStopThumb"
          role="slider"
          style="background:rgb(0,0,255)"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders max-only WuiColorStops 1`] = `
<div
  class="wuiRangeWrapper wuiColorStops testClass1 testClass2"
  data-test-subj="wuiColorStops"
  tabindex="0"
>
  <p
    aria-live="polite"
    class="wuiScreenReaderOnly"
  >
    Test:   Color stop picker. Each stop consists of a number and corresponding color value. Use the Down and Up arrow keys to select individual stops. Press the Enter key to create a new stop.
  </p>
  <div
    class="wuiRangeTrack"
  >
    <div
      class="wuiRangeHighlight wuiColorStops__highlight"
    >
      <div
        class="wuiRangeHighlight__progress"
        style="background:linear-gradient(to right,);margin-left:0%;width:100%"
      />
    </div>
    <div
      class="wuiColorStops__addContainer"
      data-test-subj="wuiColorStopsAdd"
    >
      <div
        class="wuiColorStops__addTarget"
        style="left:0%"
      />
    </div>
  </div>
</div>
`;

exports[`renders min-only WuiColorStops 1`] = `
<div
  class="wuiRangeWrapper wuiColorStops testClass1 testClass2"
  data-test-subj="wuiColorStops"
  tabindex="0"
>
  <p
    aria-live="polite"
    class="wuiScreenReaderOnly"
  >
    Test:   Color stop picker. Each stop consists of a number and corresponding color value. Use the Down and Up arrow keys to select individual stops. Press the Enter key to create a new stop.
  </p>
  <div
    class="wuiRangeTrack"
  >
    <div
      class="wuiRangeHighlight wuiColorStops__highlight"
    >
      <div
        class="wuiRangeHighlight__progress"
        style="background:linear-gradient(to right,);margin-left:0%;width:100%"
      />
    </div>
    <div
      class="wuiColorStops__addContainer"
      data-test-subj="wuiColorStopsAdd"
    >
      <div
        class="wuiColorStops__addTarget"
        style="left:0%"
      />
    </div>
  </div>
</div>
`;

exports[`renders readOnly WuiColorStops 1`] = `
<div
  class="wuiRangeWrapper wuiColorStops wuiColorStops-isReadOnly testClass1 testClass2"
  data-test-subj="wuiColorStops"
  tabindex="0"
>
  <p
    aria-live="polite"
    class="wuiScreenReaderOnly"
  >
    Test: Read-only.  Color stop picker. Each stop consists of a number and corresponding color value. Use the Down and Up arrow keys to select individual stops. Press the Enter key to create a new stop.
  </p>
  <div
    class="wuiRangeTrack"
  >
    <div
      class="wuiRangeHighlight wuiColorStops__highlight"
    >
      <div
        class="wuiRangeHighlight__progress"
        style="background:linear-gradient(to right,currentColor, currentColor undefined%, rgb(255,0,0) undefined%,rgb(0,255,0) undefined%,rgb(0,0,255) undefined%);margin-left:0%;width:100%"
      />
    </div>
    <div
      class="wuiColorStops__addContainer wuiColorStops__addContainer-isDisabled"
      data-test-subj="wuiColorStopsAdd"
    >
      <div
        class="wuiColorStops__addTarget"
        style="left:0%"
      />
    </div>
    <div
      class="wuiPopover wuiPopover--anchorDownCenter wuiColorStopPopover"
      style="left:0%"
    >
      <div
        class="wuiPopover__anchor wuiColorStopPopover__anchor"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="24"
          aria-valuemin="0"
          aria-valuenow="0"
          aria-valuetext="Stop: 0, Color: #FF0000 (1 of 3)"
          class="wuiRangeThumb wuiColorStopThumb"
          data-index="wuiColorStop_0"
          data-test-subj="wuiColorStopThumb"
          role="slider"
          style="background:rgb(255,0,0)"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="wuiPopover wuiPopover--anchorDownCenter wuiColorStopPopover"
      style="left:21%"
    >
      <div
        class="wuiPopover__anchor wuiColorStopPopover__anchor"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="34"
          aria-valuemin="1"
          aria-valuenow="25"
          aria-valuetext="Stop: 25, Color: #00FF00 (2 of 3)"
          class="wuiRangeThumb wuiColorStopThumb"
          data-index="wuiColorStop_1"
          data-test-subj="wuiColorStopThumb"
          role="slider"
          style="background:rgb(0,255,0)"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
    <div
      class="wuiPopover wuiPopover--anchorDownCenter wuiColorStopPopover"
      style="left:29.4%"
    >
      <div
        class="wuiPopover__anchor wuiColorStopPopover__anchor"
      >
        <button
          aria-disabled="false"
          aria-label="Press the Enter key to modify this stop. Press Escape to focus the group"
          aria-valuemax="100"
          aria-valuemin="26"
          aria-valuenow="35"
          aria-valuetext="Stop: 35, Color: #0000FF (3 of 3)"
          class="wuiRangeThumb wuiColorStopThumb"
          data-index="wuiColorStop_2"
          data-test-subj="wuiColorStopThumb"
          role="slider"
          style="background:rgb(0,0,255)"
          tabindex="-1"
          title="Click to edit, drag to reposition"
          type="button"
        />
      </div>
    </div>
  </div>
</div>
`;
